2004-06-30  Ben Elliston  <bje@gnu.org>

	* config.guess: Update to current revision.
	* config.sub: Likewise.

2004-06-12  Ben Elliston  <bje@gnu.org>

	* config.guess: Update to current revision.
	* config.sub: Likewise.

2004-06-08  Alexandre Oliva  <aoliva@redhat.com>

	* baseboards/mn10300-sim.exp: Set needs_status_wrapper and
	noresults to zero.

2004-06-07  Ben Elliston  <bje@gnu.org>

	* lib/libgloss.exp (build_wrapper): Remove redundant set command.

2004-03-29  Joel Brobecker  <brobecker@gnat.com>

	* lib/libgloss.exp (find_gnatmake): New procedure.
	* lib/target.exp (default_target_compile): Add support for Ada.

2004-04-16  Kazuhiro Inaoka  <inaoka dot kazuhiro at renesas dot com>
                                                                                
        * baseboards/m32r-linux-sim.exp: Add New file.
	
2004-04-02  Rob Savoye  <rob@direwolf.welcomehome.org>

	* configure.ac, example/Makefile.am: Add example/mathhelper.
	* configure, alocal.m4, example/Makefile.in: Regenerated.

2004-04-02 Joel Sherrill <joel@OARcorp.com>

	* example/mathhelper: New example for using the unit testing API.

2004-03-05  Daniel Jacobowitz  <drow@mvista.com>
                                                                                
        * lib/remote.exp (standard_spawn): Fix rsh username support.

2004-03-06  Rob Savoye  <rob@althea.welcomehome.org>

	* doc/C: New directory for DocBook XML files.
	* doc/C/dejagnu.omf: New config file for scrollkeeper.
	* doc/C/topic.dat: New config file for the GNOME help system.
	* doc/C/dejagnu.xml: DocBook XML formatted verion of what was
	overview.sgml.
	* doc/C/ref.xml: DocBook XML formatted verion of what was
	ref.sgml.
	* doc/C/user.xml: DocBook XML formatted verion of what was
	user.sgml.
	
2004-02-17  Ben Elliston  <bje@wasabisystems.com>

	* runtest.exp: Do not trap SIGSEGV.

2004-02-16  Ben Elliston  <bje@wasabisystems.com>

	* configure.ac: Update AC_INIT and AM_INIT_AUTOMAKE invocations.